Removed <header> section and <body> tags for html-to-rst conversion tool.

--- a/design/BuildingThemes/CreateContainer.html
+++ b/design/BuildingThemes/CreateContainer.html
@@ -1,90 +1,74 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
-
-<h1> Create a Container </hi>
+    <h1> Create a Container </hi>
 
 
-<h2> Overview </h2>
+    <h2> Overview </h2>
 
-<p>Containers allow designers to seamlessly integrate modules from many different developers into a cohesive site design. Containers can also include visual elements that allow site users to interact with the module.</p>
+    <p>Containers allow designers to seamlessly integrate modules from many different developers into a cohesive site design. Containers can also include visual elements that allow site users to interact with the module.</p>
 
-<ul>
-    <li>You can have a default container, which would be overridden by individual panes or modules if they provide their own style definitions.</li>
-    <li>You can use different containers in a single page.</li>
-    <li>You can mix and match any container with any CSS.</li>
-</ul>
-
-
-<h2> Steps </h2>
-<ol>
-
-<li> Create a new file for the container.
-    <p><b>Note:</b>
-        <ul>
-            <li>The container must contain at least one pane. </li>
-            <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
-            <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
-            <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
-        </ul>
-    </p>
-    <p><b>Example:</b> A very basic container.
-        <ul>
-            <li>HTML
-                <xmp>
-    <div id="ContentPane" runat="server"></div>
-                </xmp>
-            </li>
-            <li>ASCX
-                <xmp>
-    <%@ Control AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Containers.Container" %>
-    <div id="ContentPane" runat="server"></div>
-                </xmp>
-            </li>
-        </ul>
-    </p>
-</li>
-
-<li> (Optional) Add theme objects to your container for a more dynamic page.
-    <p><object width="100%" data="../../common/bptext/BP-AddThemeObjects.html"></object></p>
-
-    <p>The following theme objects are relevant to containers:</p> <!-- Joe will provide the complete list -->
-    <table width=100%>
-    <tr>
-        <td valign=top>
-            ACTIONBUTTON<br>
-            ACTIONS<br>
-            DROPDOWNACTIONS<br>
-        </td>
-        <td valign=top>
-            ICON<br>
-            LINKACTIONS<br>
-            PRINTMODULE<br>
-        </td>
-        <td valign=top>
-            TITLE<br>
-            VISIBILITY
-        </td>
-    </tr>
-    </table>
-    <p><object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object></p>
-</li>
+    <ul>
+        <li>You can have a default container, which would be overridden by individual panes or modules if they provide their own style definitions.</li>
+        <li>You can use different containers in a single page.</li>
+        <li>You can mix and match any container with any CSS.</li>
+    </ul>
 
 
-<h2> Example </h2>
+    <h2> Steps </h2>
+    <ol>
 
-<p><a href="../../common/samples/MyContainer.css" download>DOWNLOAD</a></p>
+    <li> Create a new file for the container.
+        <p><b>Note:</b>
+            <ul>
+                <li>The container must contain at least one pane. </li>
+                <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
+                <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
+                <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
+            </ul>
+        </p>
+        <p><b>Example:</b> A very basic container.
+            <ul>
+                <li>HTML
+                    <xmp>
+        <div id="ContentPane" runat="server"></div>
+                    </xmp>
+                </li>
+                <li>ASCX
+                    <xmp>
+        <%@ Control AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Containers.Container" %>
+        <div id="ContentPane" runat="server"></div>
+                    </xmp>
+                </li>
+            </ul>
+        </p>
+    </li>
+
+    <li> (Optional) Add theme objects to your container for a more dynamic page.
+        <p><object width="100%" data="../../common/bptext/BP-AddThemeObjects.html"></object></p>
+
+        <p>The following theme objects are relevant to containers:</p> <!-- Joe will provide the complete list -->
+        <table width=100%>
+        <tr>
+            <td valign=top>
+                ACTIONBUTTON<br>
+                ACTIONS<br>
+                DROPDOWNACTIONS<br>
+            </td>
+            <td valign=top>
+                ICON<br>
+                LINKACTIONS<br>
+                PRINTMODULE<br>
+            </td>
+            <td valign=top>
+                TITLE<br>
+                VISIBILITY
+            </td>
+        </tr>
+        </table>
+        <p><object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object></p>
+    </li>
 
 
+    <h2> Example </h2>
 
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
+    <p><a href="../../common/samples/MyContainer.css" download>DOWNLOAD</a></p>
