--- a/design/BuildingThemes/TestTheme.html
+++ b/design/BuildingThemes/TestTheme.html
@@ -1,42 +1,26 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
-
-<h1> Test the Theme on a Webpage </hi>
+    <h1> Test the Theme on a Webpage </hi>
 
 
-<h2> Prerequisites </h2>
+    <h2> Prerequisites </h2>
 
-<ul>
-    <li><object width="100%" data="..\..\common\bptext\BP-PrereqHost.html"></object></li>
-</ul>
-
-
-<h2> Steps </h2>
-<ol>
-
-<li>While logged in as an admin or host, create a new webpage.</li>
-
-<li>Edit the page settings and go to <b>Advanced Settings</b>.</li>
-
-<li>In the <b>Page Theme</b> section, select <b>Host</b> and choose one of the layout templates from your new theme.</li>
-
-<li>Click <b>Update</b>.</li>
-
-<li>View your page in different browsers to verify that the new theme was applied correctly.
-
-</ol>
+    <ul>
+        <li><!--#include virtual="..\common\bptext\BP-PrereqHost.html" --></li>
+    </ul>
 
 
+    <h2> Steps </h2>
+    <ol>
 
-<!--
-.. include:: /../common/stub-notice.txt
+    <li>While logged in as an admin or host, create a new webpage.</li>
 
-.. include:: /../common/contribute.txt
--->
+    <li>Edit the page settings and go to <b>Advanced Settings</b>.</li>
 
-</body>
+    <li>In the <b>Page Theme</b> section, select <b>Host</b> and choose one of the layout templates from your new theme.</li>
+
+    <li>Click <b>Update</b>.</li>
+
+    <li>View your page in different browsers to verify that the new theme was applied correctly.
+
+    </ol>
