--- a/design/PackagingThemes.html
+++ b/design/PackagingThemes.html
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
-
-<h1> Packaging Themes </hi>
+    <h1> Packaging Themes </hi>
 
 
 
 
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
