--- a/dev/BuildingModules.html
+++ b/dev/BuildingModules.html
@@ -1,109 +1,94 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
+    <h1> Building Modules </hi>
 
-<h1> Building Modules </hi>
-
-<h2> Overview </h2>
-<p>You can produce a module in different ways:
-    <ul>
-        <li>Build an entire module from scratch.</li>
-        <li><a href="BuildModuleFromTemplate.html">Customize a set of module development templates.</a></li>
-        <li>Use a pre-existing module. Hundreds of third-party modules are available from these sources:
-            <ul>
-                <li>For sale: <a href="http://store.dnnsoftware.com">DNN Store</a> - Some developers provide versions that include the source code.</li>
-                <li>Open source and free:
-                    <ul>
-                        <li><a href="http://www.DNNSoftware.com/Forge">DNN Forge</a></li>
-                        <li><a href="http://DotNetNuke.CodePlex.com">DNN at Codeplex</a></li>
-                        <li><a href="https://github.com/dnnsoftware">DNN at GitHub</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </li>
-    </ul>
-</p>
-
-
-<h2>Prerequisites</h2>
-
-<ul>
-    <li><a href="Building Modules\Set up Dev Environment.html">A local DNN development environment</a></li>
-</ul>
-
-
-<h2>Steps</h2>
-
-<ol>
-
-<li><b>Create a new module or modify an existing one.</b>
-    <ul>
-        <li><a href="BuildWebFormsModule">Build a Web Forms module.</a></li>
-        <li><a href="BuildMVCModule.html">Build an MVC module.</a></li>
-        <li><a href="BuildSPAModule.html">Build SPA module.</a></li>
-    </ul>
-</li>
-
-<li><b>Test your module.</b>
-    <p><b>Tip:</b> As part of your tests, run your module through the DNN <a href="http://evs.dotnetnuke.com/">Extension Verification Service</a> (EVS) to perform the compatibility tests in three areas:<br>
+    <h2> Overview </h2>
+    <p>You can produce a module in different ways:
         <ul>
-            <li><b>Module packaging</b>. EVS verifies:
+            <li>Build an entire module from scratch.</li>
+            <li><a href="BuildModuleFromTemplate.html">Customize a set of module development templates.</a></li>
+            <li>Use a pre-existing module. Hundreds of third-party modules are available from these sources:
                 <ul>
-                    <li>That a valid <b>.dnn</b> manifest file exists. Errors are issued, if required sections are missing; warnings, if optional sections are missing.</li>
-                    <li>That all files listed in the manifest exist in the package.</li>
-                    <li>That all files included in the package are listed in the manifest.</li>
-                </ul>
-            </li>
-
-            <li><b>Data layer</b>. EVS verifies:
-                <ul>
-                    <li>That core database objects were not modified.</li>
-                    <li>That any SQL scripts in the module are compatible with SQL Azure and can execute without errors. If Azure-incompatible SQL scripts are found, EVS generates Azure-compatible versions of those scripts and makes them available in a zip file.</li>
-                    <li>That SQL's {databaseOwner} and {objectQualifier} are correctly used.</li>
-                    <li>That the uninstall script completely removes all objects added by the installation script.</li>
-                </ul>
-            </li>
-
-            <li><b>Assemblies</b>. EVS verifies:
-                <ul>
-                    <li>That no assembly errors exist.</li>
-                    <li>That every assembly reference points to an assembly that exists either in DNN or in the .NET global assembly cache (GAC). If the assembly is not found, EVS returns an error.</li>
+                    <li>For sale: <a href="http://store.dnnsoftware.com">DNN Store</a> - Some developers provide versions that include the source code.</li>
+                    <li>Open source and free:
+                        <ul>
+                            <li><a href="http://www.DNNSoftware.com/Forge">DNN Forge</a></li>
+                            <li><a href="http://DotNetNuke.CodePlex.com">DNN at Codeplex</a></li>
+                            <li><a href="https://github.com/dnnsoftware">DNN at GitHub</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
         </ul>
-        <!-- img src="..\common\img\scr-EVS.png" -->
     </p>
-</li>
-
-<li><b><a href="PackagingModules.html">Package your module.</a></b></li>
-
-<li><b>Install your module.</b></li>
-
-</ol>
 
 
-<h2> See Also </h2>
-<ul>
-	<li><a href="IntroToModules.html">Introduction to DNN Modules</a></li>
-</ul>
+    <h2>Prerequisites</h2>
+
+    <ul>
+        <li><a href="Building Modules\Set up Dev Environment.html">A local DNN development environment</a></li>
+    </ul>
 
 
-<h2> Sources </h2>
-<ul>
-    <li>DNN Wiki: <a href="http://www.dnnsoftware.com/wiki/module-development">Module Development</a></li>
-    <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/155064/module-development-for-non-developers-skinners-dnn-beginners--blog-series-intro">Module Development</a> series by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/710933">Clinton Patterson</a></li>
-    <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/147439/extension-verification-service-evs">Extension Verification Service (EVS)</a> and <a href="http://www.dnnsoftware.com/community-blog/cid/154576/extension-verification-service-evs-update%20from%20june%202013">Extension Verification Service (EVS) Update</a> by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/169038">Nathan Rover</a></li>
-</ul>
+    <h2>Steps</h2>
+
+    <ol>
+
+    <li><b>Create a new module or modify an existing one.</b>
+        <ul>
+            <li><a href="BuildWebFormsModule">Build a Web Forms module.</a></li>
+            <li><a href="BuildMVCModule.html">Build an MVC module.</a></li>
+            <li><a href="BuildSPAModule.html">Build SPA module.</a></li>
+        </ul>
+    </li>
+
+    <li><b>Test your module.</b>
+        <p><b>Tip:</b> As part of your tests, run your module through the DNN <a href="http://evs.dotnetnuke.com/">Extension Verification Service</a> (EVS) to perform the compatibility tests in three areas:<br>
+            <ul>
+                <li><b>Module packaging</b>. EVS verifies:
+                    <ul>
+                        <li>That a valid <b>.dnn</b> manifest file exists. Errors are issued, if required sections are missing; warnings, if optional sections are missing.</li>
+                        <li>That all files listed in the manifest exist in the package.</li>
+                        <li>That all files included in the package are listed in the manifest.</li>
+                    </ul>
+                </li>
+
+                <li><b>Data layer</b>. EVS verifies:
+                    <ul>
+                        <li>That core database objects were not modified.</li>
+                        <li>That any SQL scripts in the module are compatible with SQL Azure and can execute without errors. If Azure-incompatible SQL scripts are found, EVS generates Azure-compatible versions of those scripts and makes them available in a zip file.</li>
+                        <li>That SQL's {databaseOwner} and {objectQualifier} are correctly used.</li>
+                        <li>That the uninstall script completely removes all objects added by the installation script.</li>
+                    </ul>
+                </li>
+
+                <li><b>Assemblies</b>. EVS verifies:
+                    <ul>
+                        <li>That no assembly errors exist.</li>
+                        <li>That every assembly reference points to an assembly that exists either in DNN or in the .NET global assembly cache (GAC). If the assembly is not found, EVS returns an error.</li>
+                    </ul>
+                </li>
+            </ul>
+            <!-- img src="..\common\img\scr-EVS.png" -->
+        </p>
+    </li>
+
+    <li><b><a href="PackagingModules.html">Package your module.</a></b></li>
+
+    <li><b>Install your module.</b></li>
+
+    </ol>
 
 
-<!--
-.. include:: /../common/stub-notice.txt
+    <h2> See Also </h2>
+    <ul>
+        <li><a href="IntroToModules.html">Introduction to DNN Modules</a></li>
+    </ul>
 
-.. include:: /../common/contribute.txt
--->
 
-</body>
+    <h2> Sources </h2>
+    <ul>
+        <li>DNN Wiki: <a href="http://www.dnnsoftware.com/wiki/module-development">Module Development</a></li>
+        <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/155064/module-development-for-non-developers-skinners-dnn-beginners--blog-series-intro">Module Development</a> series by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/710933">Clinton Patterson</a></li>
+        <li>DNN Community Blog: <a href="http://www.dnnsoftware.com/community-blog/cid/147439/extension-verification-service-evs">Extension Verification Service (EVS)</a> and <a href="http://www.dnnsoftware.com/community-blog/cid/154576/extension-verification-service-evs-update%20from%20june%202013">Extension Verification Service (EVS) Update</a> by <a href="http://www.dnnsoftware.com/Activity-Feed/userId/169038">Nathan Rover</a></li>
+    </ul>
