--- a/dev/BuildingModules/BuildWebFormsModule.html
+++ b/dev/BuildingModules/BuildWebFormsModule.html
@@ -1,36 +1,20 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
+    <h1>  </hi>
 
-<h1>  </hi>
-
-<h2> Overview </h2>
+    <h2> Overview </h2>
 
 
-<h2> Prerequisites </h2>
+    <h2> Prerequisites </h2>
 
-<ul>
-    <li><object width="100%" data="..\common\bptext\BP-PrereqHost.html"></object></li>
-</ul>
-
-
-<h2> Steps </h2>
-<ol>
-
-<li></li>
-
-</ol>
+    <ul>
+        <li><!--#include virtual="..\common\bptext\BP-PrereqHost.html" --></li>
+    </ul>
 
 
+    <h2> Steps </h2>
+    <ol>
 
-<!--
-.. include:: /../common/stub-notice.txt
+    <li></li>
 
-.. include:: /../common/contribute.txt
--->
-
-</body>
+    </ol>
