--- a/main/Glossary.html
+++ b/main/Glossary.html
@@ -1,80 +1,65 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
+    <h1> Glossary </h1>
 
-<h1> Glossary </h1>
+    <dl>
 
-<dl>
+    <dt>Advanced URL Management System (AUM)</dt>
+        <dd>...</dd>
 
-<dt>Advanced URL Management System (AUM)</dt>
-    <dd>...</dd>
+    <dt>ASCX</dt>
+        <dd>ASP.NET user control.</dd>
 
-<dt>ASCX</dt>
-    <dd>ASP.NET user control.</dd>
+    <dt>container</dt>
+        <dd>A set of related components that define the look and feel of a module. In contrast, a <b>skin</b> or <b>theme</b> defines the look and feel of an entire web page or site.</dd>
 
-<dt>container</dt>
-    <dd>A set of related components that define the look and feel of a module. In contrast, a <b>skin</b> or <b>theme</b> defines the look and feel of an entire web page or site.</dd>
+    <dt>CTP</dt>
+        <dd>...</dd>
 
-<dt>CTP</dt>
-    <dd>...</dd>
+    <dt>data access layer (DAL)</dt>
+        <dd>The set of scripts and other files that are required by a module to access the database. This layer includes scripts of both the abstract data provider and the concrete data provider.</dd> <!-- Is this correct? -->
 
-<dt>data access layer (DAL)</dt>
-    <dd>The set of scripts and other files that are required by a module to access the database. This layer includes scripts of both the abstract data provider and the concrete data provider.</dd> <!-- Is this correct? -->
+    <dt>extension</dt>
+        <dd>A combination of themes, modules, or other components that extend the functionality of DNN Platform.</dd>
 
-<dt>extension</dt>
-    <dd>A combination of themes, modules, or other components that extend the functionality of DNN Platform.</dd>
+    <dt>HMAC</dt>
+        <dd>...</dd>
 
-<dt>HMAC</dt>
-    <dd>...</dd>
+    <dt>host</dt>
+        <dd>An IT administrator account used to manage the server and its apps.</dd>
 
-<dt>host</dt>
-    <dd>An IT administrator account used to manage the server and its apps.</dd>
+    <dt>manifest</dt>
+        <dd>An XML file (e.g., MyExtension.dnn) that specifies how each file in the extension package must be processed during installation.</dd>
 
-<dt>manifest</dt>
-    <dd>An XML file (e.g., MyExtension.dnn) that specifies how each file in the extension package must be processed during installation.</dd>
+    <dt>module</dt>
+        <dd>Code that provides some functionality in a webpage. Example: A module could produce dynamic content, which is displayed in a <b>pane</b> on the page.</dd>
 
-<dt>module</dt>
-    <dd>Code that provides some functionality in a webpage. Example: A module could produce dynamic content, which is displayed in a <b>pane</b> on the page.</dd>
+    <dt>model-view-controller (MVC)</dt>
+        <dd>A software architecture that separates how the data is stored (model), how it is presented (view), and how the process is managed (controller).</dd>
 
-<dt>model-view-controller (MVC)</dt>
-    <dd>A software architecture that separates how the data is stored (model), how it is presented (view), and how the process is managed (controller).</dd>
+    <dt>package</dt>
+        <dd>A structure that holds all components of an extension to be added to a DNN-based website.</dd>
 
-<dt>package</dt>
-    <dd>A structure that holds all components of an extension to be added to a DNN-based website.</dd>
+    <dt>pane</dt>
+        <dd>An area in a layout template. A pane displays user-generated content or a standard skin element.</dd>
 
-<dt>pane</dt>
-    <dd>An area in a layout template. A pane displays user-generated content or a standard skin element.</dd>
+    <dt>skin</dt>
+    <dt>theme</dt>
+        <dd>A set of related components that define the look and feel of a page or site. These components include:
+            <ul>
+                <li>one or more layout templates, and</li>
+                <li>an optional CSS for each of the templates, or an optional master CSS for the entire site.</li>
+            </ul>
+            In contrast, a <b>container</b> and any associated CSS define the look and feel of a module in a single pane of a page.
+        </dd>
 
-<dt>skin</dt>
-<dt>theme</dt>
-    <dd>A set of related components that define the look and feel of a page or site. These components include:
-        <ul>
-            <li>one or more layout templates, and</li>
-            <li>an optional CSS for each of the templates, or an optional master CSS for the entire site.</li>
-        </ul>
-        In contrast, a <b>container</b> and any associated CSS define the look and feel of a module in a single pane of a page.
-    </dd>
+    <dt>single-page application (SPA)</dt>
+        <dd>A web application that allows content to fit in a single page for a better user experience.</dd>
 
-<dt>single-page application (SPA)</dt>
-    <dd>A web application that allows content to fit in a single page for a better user experience.</dd>
+    <dt>theme object</dt>
+        <dd>A standard element that is common among websites. Examples: menu bar, copyright notice, login/registration links, privacy link, terms of service link, and search box.</dd>
 
-<dt>theme object</dt>
-    <dd>A standard element that is common among websites. Examples: menu bar, copyright notice, login/registration links, privacy link, terms of service link, and search box.</dd>
+    <dt>super user</dt>
+       <dd>(See <b>host</b>.)</dd>
 
-<dt>super user</dt>
-   <dd>(See <b>host</b>.)</dd>
-
-</dl>
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
+    </dl>
