--- a/design/BuildingThemes/CreateCSS.html
+++ b/design/BuildingThemes/CreateCSS.html
@@ -1,75 +1,59 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
+    <h1> Create a CSS File </hi>
 
-<h1> Create a CSS File </hi>
+    <h2> Overview </h2>
+    <p>CSS files can be associated with a layout template or container by giving it the same filename and placing it in the same folder. When a layout template (or container) is applied to a webpage (or pane), the associated CSS file is automatically applied. Example: These three files are automatically associated with each other:
+        <ul>
+            <li>MyLayout.ascx</li>
+            <li>MyLayout.css</li>
+            <li>MyLayout.doctype.xml</li>
+        </ul>
+    </p>
 
-<h2> Overview </h2>
-<p>CSS files can be associated with a layout template or container by giving it the same filename and placing it in the same folder. When a layout template (or container) is applied to a webpage (or pane), the associated CSS file is automatically applied. Example: These three files are automatically associated with each other:
-    <ul>
-        <li>MyLayout.ascx</li>
-        <li>MyLayout.css</li>
-        <li>MyLayout.doctype.xml</li>
-    </ul>
-</p>
+    <p>CSS files are applied hierarchically.
+        <ol>
+            <li>If a layout template or container does not have a specific CSS associated with it, the master CSS for the theme is used. The master CSS for the theme must be called <code>skin.css</code>.</li>
+            <li>If the theme does not have a master CSS, then the default theme for the website is used.</li>
+            <li>If the website does not have a master CSS, then the default theme for the host is used.</li>
+        </ol>
+    </p>
+    <!--
+    <link href="skin.css">
+    <link href="Main.css">
+    <link href="container.css">
+    <link href="/Portals/0/portal.css">
+    <link href="/Resources/Shared/stylesheets/dnndefault/8.0.0/default.css">
+    -->
 
-<p>CSS files are applied hierarchically.
+
+    <h2> Steps </h2>
     <ol>
-        <li>If a layout template or container does not have a specific CSS associated with it, the master CSS for the theme is used. The master CSS for the theme must be called <code>skin.css</code>.</li>
-        <li>If the theme does not have a master CSS, then the default theme for the website is used.</li>
-        <li>If the website does not have a master CSS, then the default theme for the host is used.</li>
+
+    <li>For every pane (&lt;div&gt;) that contains a theme object, add a style definition in the CSS file. The style definition must start with <b>#</b> followed by the <b>div</b> <b>id</b>.<br>
+    <b>Example:</b>
+        <table border=1 width=100%>
+        <tr align=center bgcolor=silver><th width=50%>layout template</th><th width=50%>CSS</th></tr>
+        <tr>
+            <td>
+            <xmp>
+        <div id="login_style" class="user">
+            <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
+                <param name="CssClass" value="user" />
+            </object>
+        </div>
+            </xmp>
+            </td>
+            <td>
+            <xmp>
+        #login_style .linkseparator{
+             color: white;
+             font-weight: bold;
+        }
+            </xmp>
+            </td>
+        </tr>
+        </table>
+    </li>
+
     </ol>
-</p>
-<!--
-<link href="skin.css">
-<link href="Main.css">
-<link href="container.css">
-<link href="/Portals/0/portal.css">
-<link href="/Resources/Shared/stylesheets/dnndefault/8.0.0/default.css">
--->
-
-
-<h2> Steps </h2>
-<ol>
-
-<li>For every pane (&lt;div&gt;) that contains a theme object, add a style definition in the CSS file. The style definition must start with <b>#</b> followed by the <b>div</b> <b>id</b>.<br>
-<b>Example:</b>
-    <table border=1 width=100%>
-    <tr align=center bgcolor=silver><th width=50%>layout template</th><th width=50%>CSS</th></tr>
-    <tr>
-        <td>
-        <xmp>
-    <div id="login_style" class="user">
-        <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
-            <param name="CssClass" value="user" />
-        </object>
-    </div>
-        </xmp>
-        </td>
-        <td>
-        <xmp>
-    #login_style .linkseparator{
-         color: white;
-         font-weight: bold;
-    }
-        </xmp>
-        </td>
-    </tr>
-    </table>
-</li>
-
-</ol>
-
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
