--- a/design/BuildingThemes/CreateDocTypeXML.html
+++ b/design/BuildingThemes/CreateDocTypeXML.html
@@ -1,60 +1,42 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
-
-<h1> Create a DocType XML </hi>
+    <h1> Create a DocType XML </hi>
 
 
-<h2> Overview </h2>
-If a page is not rendering properly in some browsers, you can force the theme to be rendered in <b>XHTML</b> or <b>HTML5</b> by creating a doctype XML file.
+    <h2> Overview </h2>
+    If a page is not rendering properly in some browsers, you can force the theme to be rendered in <b>XHTML</b> or <b>HTML5</b> by creating a doctype XML file.
 
-<h2> Steps </h2>
-<ol type=a>
+    <h2> Steps </h2>
+    <ol type=a>
 
-<li>Create a doctype XML file with the same name as your layout template file, followed by <b>.doctype.xml</b>.<br>
-     <b>Example:</b> If your layout template file is called <b>MyAwesomeLayout.html</b>, give your doctype file the name <b>MyAwesomeLayout.doctype.xml</b>.
-</li>
-
-<li>Enter one of the following in your doctype file:
-    <ul>
-    <li>XHTML Strict
-        <xmp>
-    <SkinDocType>
-        <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">]]>
-    </SkinDocType>
-        </xmp>
+    <li>Create a doctype XML file with the same name as your layout template file, followed by <b>.doctype.xml</b>.<br>
+         <b>Example:</b> If your layout template file is called <b>MyAwesomeLayout.html</b>, give your doctype file the name <b>MyAwesomeLayout.doctype.xml</b>.
     </li>
-    <li>XHTML Transitional
-        <xmp>
-    <SkinDocType>
-        <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">]]>
-    </SkinDocType>
-        </xmp>
+
+    <li>Enter one of the following in your doctype file:
+        <ul>
+        <li>XHTML Strict
+            <xmp>
+        <SkinDocType>
+            <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">]]>
+        </SkinDocType>
+            </xmp>
+        </li>
+        <li>XHTML Transitional
+            <xmp>
+        <SkinDocType>
+            <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">]]>
+        </SkinDocType>
+            </xmp>
+        </li>
+        <li>HTML5
+            <xmp>
+        <SkinDocType>
+            <![CDATA[<!DOCTYPE html>]]>
+        </SkinDocType>
+            </xmp>
+        </li>
+        </ul>
     </li>
-    <li>HTML5
-        <xmp>
-    <SkinDocType>
-        <![CDATA[<!DOCTYPE html>]]>
-    </SkinDocType>
-        </xmp>
-    </li>
-    </ul>
-</li>
 
-</ol>
-
-
-
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
+    </ol>
