--- a/design/BuildingThemes/CreateLayoutTemplate.html
+++ b/design/BuildingThemes/CreateLayoutTemplate.html
@@ -1,169 +1,153 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
-
-<h1> Create a Layout Template </hi>
+    <h1> Create a Layout Template </hi>
 
 
-<h2> Steps </h2>
-<ol>
+    <h2> Steps </h2>
+    <ol>
 
-<li> Create a new file for the layout template.
-    <p><b>Note:</b>
+    <li> Create a new file for the layout template.
+        <p><b>Note:</b>
+            <ul>
+                <li>The layout template must contain at least one pane.</li>
+                <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
+                <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li> <!-- Joe will confirm. -->
+                <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
+            </ul>
+        </p>
+
+        <p><b>Example:</b> A very basic layout template.
+            <ul>
+                <li>HTML
+                    <xmp>
+        <div id="ContentPane" runat="server"></div>
+                    </xmp>
+                </li>
+                <li>ASCX
+                    <xmp>
+        <%@ Control language="vb" AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Skins.Skin" %>
+        <div id="ContentPane" runat="server"></div>
+                    </xmp>
+                </li>
+            </ul>
+        </p>
+
+        <p><b>Example:</b> A layout template with several panes, a header, a footer, and a LOGO theme object.
+            <ul>
+                <li>HTML
+                    <xmp>
+        <div id="wrapper">
+             <div id="header">
+                [LOGO]
+             </div>
+             <div id="sidebar">
+                  <div id="feed">
+                        <a class="feed-button" href="#">&nbsp;</a>
+                  </div>
+                  <div id="SidebarPane" class="SidebarPane" runat="server"></div>
+                  <div id="sidebar-bottom">&nbsp;</div>
+             </div>
+             <div id="content">
+                  <div id="BannerPane" class="BannerPane" runat="server"></div>
+                  <div id="ContentPane" runat="server"></div>
+             </div>
+             <div id="footer"></div>
+        </div>
+                    </xmp>
+                </li>
+                <li>ASCX
+                    <xmp>
+        <%@ Control language="vb" AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Skins.Skin" %>
+        <%@ Register TagPrefix="dnn" TagName="LOGO" Src="~/Admin/Skins/Logo.ascx" %>
+        <div id="wrapper">
+             <div id="header">
+                <dnn:LOGO runat="server" id="dnnLOGO" />
+             </div>
+             <div id="sidebar">
+                  <div id="feed">
+                        <a class="feed-button" href="#">&nbsp;</a>
+                  </div>
+                  <div id="MySidebarPane" class="SidebarPane" runat="server"></div>
+                  <div id="sidebar-bottom">&nbsp;</div>
+             </div>
+             <div id="content">
+                  <div id="MyBannerPane" class="MyBannerPane" runat="server"></div>
+                  <div id="ContentPane" runat="server"></div>
+
+             </div>
+             <div id="footer"></div>
+        </div>
+                    </xmp>
+                </li>
+            </ul>
+        </p>
+
+        <p><b>Tip:</b> ASP.NET might modify the control names (e.g., <b>div id</b>) when the page is rendered to avoid duplicate control names in a page. Instead of depending on the control name when styling, add a <b>class</b> attribute to each of the controls and refer to those class attributes in your CSS.</p>
+    </li>
+
+    <li> (Optional) Add theme objects to any pane for a more dynamic page.
         <ul>
-            <li>The layout template must contain at least one pane.</li>
-            <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
-            <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li> <!-- Joe will confirm. -->
-            <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
-        </ul>
-    </p>
-
-    <p><b>Example:</b> A very basic layout template.
-        <ul>
-            <li>HTML
-                <xmp>
-    <div id="ContentPane" runat="server"></div>
-                </xmp>
+            <li>In HTML, you can use the HTML token (e.g., <code>[LOGIN]</code>).
+                <p><b>Example:</b>
+                    <xmp>
+        <div id="login_style" class="user">
+            [LOGIN]
+        </div>
+                    </xmp>
+                </p>
             </li>
-            <li>ASCX
-                <xmp>
-    <%@ Control language="vb" AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Skins.Skin" %>
-    <div id="ContentPane" runat="server"></div>
-                </xmp>
-            </li>
-        </ul>
-    </p>
-
-    <p><b>Example:</b> A layout template with several panes, a header, a footer, and a LOGO theme object.
-        <ul>
-            <li>HTML
-                <xmp>
-    <div id="wrapper">
-         <div id="header">
-            [LOGO]
-         </div>
-         <div id="sidebar">
-              <div id="feed">
-                    <a class="feed-button" href="#">&nbsp;</a>
-              </div>
-              <div id="SidebarPane" class="SidebarPane" runat="server"></div>
-              <div id="sidebar-bottom">&nbsp;</div>
-         </div>
-         <div id="content">
-              <div id="BannerPane" class="BannerPane" runat="server"></div>
-              <div id="ContentPane" runat="server"></div>
-         </div>
-         <div id="footer"></div>
-    </div>
-                </xmp>
-            </li>
-            <li>ASCX
-                <xmp>
-    <%@ Control language="vb" AutoEventWireup="false" Explicit="True" Inherits="DotNetNuke.UI.Skins.Skin" %>
-    <%@ Register TagPrefix="dnn" TagName="LOGO" Src="~/Admin/Skins/Logo.ascx" %>
-    <div id="wrapper">
-         <div id="header">
-            <dnn:LOGO runat="server" id="dnnLOGO" />
-         </div>
-         <div id="sidebar">
-              <div id="feed">
-                    <a class="feed-button" href="#">&nbsp;</a>
-              </div>
-              <div id="MySidebarPane" class="SidebarPane" runat="server"></div>
-              <div id="sidebar-bottom">&nbsp;</div>
-         </div>
-         <div id="content">
-              <div id="MyBannerPane" class="MyBannerPane" runat="server"></div>
-              <div id="ContentPane" runat="server"></div>
-
-         </div>
-         <div id="footer"></div>
-    </div>
-                </xmp>
+            <li>In ASCX, you must register the ASCX token (e.g., <code>&lt;dnn:Login ...</code>) before using it for the first time in the file.
+                <p><b>Example:</b>
+                    <xmp>
+        <%@ Register TagPrefix="dnn" TagName="Login" Src="~/Admin/Skins/login.ascx" %>
+        ...
+        <div id="login_style" class="user">
+            <dnn:Login runat="server" id="dnnLogin" CssClass="user" />
+        </div>
+                    </xmp>
+                </p>
             </li>
         </ul>
-    </p>
 
-    <p><b>Tip:</b> ASP.NET might modify the control names (e.g., <b>div id</b>) when the page is rendered to avoid duplicate control names in a page. Instead of depending on the control name when styling, add a <b>class</b> attribute to each of the controls and refer to those class attributes in your CSS.</p>
-</li>
+        <p>A default DNN installation includes the following theme objects:</p>  <!-- Send email to Joe for the current list. -->
+        <table width=100%>
+        <tr>
+            <td valign=top>
+                BANNER<br>
+                BREADCRUMB<br>
+                COPYRIGHT<br>
+                CURRENTDATE<br>
+                DOTNETNUKE<br>
+                HELP<br>
+                HOSTNAME<br>
+                LANGUAGE<br>
+            </td>
+            <td valign=top>
+                LEFTMENU<br>
+                LINKS<br>
+                LOGIN<br>
+                LOGO<br>
+                MENU<br>
+                NAV<br>
+                PRIVACY<br>
+                SEARCH<br>
+            </td>
+            <td valign=top>
+                SOLPARTMENU<br>
+                STYLES<br>
+                TAGS<br>
+                TERMS<br>
+                TEXT<br>
+                TREEVIEW<br>
+                USER<br>
+            </td>
+        </tr>
+        </table>
 
-<li> (Optional) Add theme objects to any pane for a more dynamic page.
-    <ul>
-        <li>In HTML, you can use the HTML token (e.g., <code>[LOGIN]</code>).
-            <p><b>Example:</b>
-                <xmp>
-    <div id="login_style" class="user">
-        [LOGIN]
-    </div>
-                </xmp>
-            </p>
-        </li>
-        <li>In ASCX, you must register the ASCX token (e.g., <code>&lt;dnn:Login ...</code>) before using it for the first time in the file.
-            <p><b>Example:</b>
-                <xmp>
-    <%@ Register TagPrefix="dnn" TagName="Login" Src="~/Admin/Skins/login.ascx" %>
-    ...
-    <div id="login_style" class="user">
-        <dnn:Login runat="server" id="dnnLogin" CssClass="user" />
-    </div>
-                </xmp>
-            </p>
-        </li>
-    </ul>
+        <p>
+            <!--#include file="../../common/bptext/BP-TipSkinningTool.html" -->
+            <object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object>
+        </p>
+    </li>
 
-    <p>A default DNN installation includes the following theme objects:</p>  <!-- Send email to Joe for the current list. -->
-    <table width=100%>
-    <tr>
-        <td valign=top>
-            BANNER<br>
-            BREADCRUMB<br>
-            COPYRIGHT<br>
-            CURRENTDATE<br>
-            DOTNETNUKE<br>
-            HELP<br>
-            HOSTNAME<br>
-            LANGUAGE<br>
-        </td>
-        <td valign=top>
-            LEFTMENU<br>
-            LINKS<br>
-            LOGIN<br>
-            LOGO<br>
-            MENU<br>
-            NAV<br>
-            PRIVACY<br>
-            SEARCH<br>
-        </td>
-        <td valign=top>
-            SOLPARTMENU<br>
-            STYLES<br>
-            TAGS<br>
-            TERMS<br>
-            TEXT<br>
-            TREEVIEW<br>
-            USER<br>
-        </td>
-    </tr>
-    </table>
-
-    <p>
-        <!--#include file="../../common/bptext/BP-TipSkinningTool.html" -->
-        <object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object>
-    </p>
-</li>
-
-</ol>
-
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
+    </ol>
