--- a/design/UploadingThemes.html
+++ b/design/UploadingThemes.html
@@ -1,50 +1,34 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
+    <h1> Uploading Themes to Your DNN Website</hi>
 
-<h1> Uploading Themes to Your DNN Website</hi>
+    <h2> Prerequisites </h2>
 
-<h2> Prerequisites </h2>
-
-<ul>
-    <li><object width="100%" data="..\common\bptext\BP-PrereqHost.html"></object></li>
-</ul>
-
-
-<h2> Steps </h2>
-<ol>
-
-<li> While logged in as a host, go to <b>Host</b> &gt; <b>File Management</b>.<br>
-    <image src="../../common/img/scr-Host-FileMgmt.png" width=75%>
-</li>
-
-<li> In your DNN installation, create a new folder for your theme under <b>Themes\_default</b>. The new folder name becomes the name of the DNN theme.</li>
-    <image src="../../common/img/scr-SkinsDefaultCreateFolder.png" width=55%><br>
-    <image src="../../common/img/scr-CreateNewFolder.png" width=55% valign=center>
-
-<li>Upload these files to the new DNN theme folder:
     <ul>
-        <li>layout templates for the site</li>
-        <li>CSS files for the site (These must be in the same folder as the associated layout templates.)</li>
-        <li>containers for modules</li>
+        <li><!--#include virtual="..\common\bptext\BP-PrereqHost.html" --></li>
     </ul>
-    <br>
-    <image src="../../common/img/scr-UploadLayoutTemplate.png" width=55%><br>
-    <image src="../../common/img/scr-UploadFiles.png" width=75%>
-</li>
-
-</ol>
 
 
+    <h2> Steps </h2>
+    <ol>
 
-<!--
-.. include:: /../common/stub-notice.txt
+    <li> While logged in as a host, go to <b>Host</b> &gt; <b>File Management</b>.<br>
+        <image src="../../common/img/scr-Host-FileMgmt.png" width=75%>
+    </li>
 
-.. include:: /../common/contribute.txt
--->
+    <li> In your DNN installation, create a new folder for your theme under <b>Themes\_default</b>. The new folder name becomes the name of the DNN theme.</li>
+        <image src="../../common/img/scr-SkinsDefaultCreateFolder.png" width=55%><br>
+        <image src="../../common/img/scr-CreateNewFolder.png" width=55% valign=center>
 
-</body>
+    <li>Upload these files to the new DNN theme folder:
+        <ul>
+            <li>layout templates for the site</li>
+            <li>CSS files for the site (These must be in the same folder as the associated layout templates.)</li>
+            <li>containers for modules</li>
+        </ul>
+        <br>
+        <image src="../../common/img/scr-UploadLayoutTemplate.png" width=55%><br>
+        <image src="../../common/img/scr-UploadFiles.png" width=75%>
+    </li>
+
+    </ol>
