--- a/main/PackagingExtensions/BuildPackage.html
+++ b/main/PackagingExtensions/BuildPackage.html
@@ -1,181 +1,166 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-</head>
-<body>
+.. raw:: html
 
-<!-- .. include:: /../common/stub-topic.txt -->
+    <h1> Build a Package </hi>
 
-<h1> Build a Package </hi>
+    <h2> Overview </h2>
+    The most basic DNN skin configuration is comprised of one layout template. However, you can also create a master CSS file for all layout templates or one CSS file for each layout template.
 
-<h2> Overview </h2>
-The most basic DNN skin configuration is comprised of one layout template. However, you can also create a master CSS file for all layout templates or one CSS file for each layout template.
+    <h2> Prerequisites </h2>
 
-<h2> Prerequisites </h2>
-
-<ul>
-    <li><object width="100%" data="..\common\bptext\BP-PrereqHost.html"></object></li>
-</ul>
-
-
-<h2> Steps </h2>
-<ol>
-
-<li>Prepare your files in folders.
     <ul>
-        <li><b>Layout templates and associated files</b>
-            <p><b>Tip:</b> You can provide a preview by including an image file with the same filename as your layout template or container; example, add a <code>MyLayoutOrContainer.jpg</code> preview for the <code>MyLayoutOrContainer.ascx</code> layout template or container.</p> <!-- Is this correct? -->
-            <ul>
-                <li>Layout template files (*.ascx)</li>
-                <li>Preview of individual layout templates (*.png/jpg/etc.)</li> <!-- Video only showed jpg. Is it restricted to jpg? -->
-                <li>Document Type XML file for individual layout templates (*.doctype.xml)</li>
-                <li>CSS for individual layout templates (*.css)</li>
-                <li>CSS for the theme (skin.css)</li>
-                <li>Custom attributes of tokens (skin.xml)</li>
-           </ul>
-        </li>
-        <li><b>Containers and associated files</b>
-            <ul>
-                <li>Container files (*.ascx)</li>
-                <li>Preview of individual containers (*.png/jpg/etc.)</li> <!-- Video only showed jpg. Is it restricted to jpg? -->
-                <li>CSS for individual containers (*.css)</li>
-                <li>Custom attributes of tokens (container.xml)</li>
-            </ul>
-        </li>
-        <li><b>Modules and associated files</b>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </li>
-        <li><b>Folders</b>
-            <ul>
-                <li>css - All CSS required by layout templates and containers.</li>
-                <li>fonts - All web fonts used by the theme.</li>
-                <li>images - All image files used by the theme.</li>
-                <li>js - All JScript files used by the theme, such as bootstrap.min.js and common.js.</li>
-                <li>menu - All desktop menu files for the skin.</li>
-                <li>mobmenu - All mobile menu files for the skin.</li>
-            </ul>
-        </li>
-        <li><b>License/Release Notes</b>
-            <p>These files are HTML-formatted files:</p>
-            <ul>
-                <li>MyContainerLicense.txt</li>
-                <li>MyContainerReleaseNotes.txt</li>
-                <li>MyPackageLicense.txt</li>
-                <li>MyPackageReleaseNotes.txt</li>
-                <li>MySkinLicense.txt</li>
-                <li>MySkinReleaseNotes.txt</li>
-            </ul>
-            <p><b>Tip:</b> In the license files, you can include special offers, including a call to action and other details.</p>
-            <p><b>Reminder:</b> Include the version number of your extension in the release notes. </p>
-        </li>
-        <li></li>
-        <li></li>
+        <li><!--#include virtual="..\common\bptext\BP-PrereqHost.html" --></li>
     </ul>
-</li>
 
 
-<li>Create the <a href="DNNManifestSchema.html">DNN manifest</a>.
-    <p><b>Note:</b> Containers must be defined under a separate <code><package></code> section, even though it would be installed as part of the theme.</p> <!-- Is this still true? -->
-    <p>Example of a portion of the <b>DNN manifest</b> of a theme:
-        <xmp>
-    <package name="..." type="Skin" version="...">
-        ...
-        <license src="MySkinLicense.txt" />
-        <releaseNotes src="MySkinReleaseNotes.txt" />
-        ...
-        <components>
-            <component type="File">
-                <files>
-                    <file>
-                        <name>MyPackageLicense.txt</name>
-                    </file>
-                    <file>
-                        <name>MyPackageReleaseNotes.txt</name>
-                    </file>
-                </files>
-            </component>
-            <component type="Skin">
-                <skinFiles>
-                    <basePath /> <!-- Target base folder for the component installation. Relative to the root of the DNN installation. -->
-                    <skinName>MyThemeName</skinName>
+    <h2> Steps </h2>
+    <ol>
 
-                    <!-- Create a skinFile section for every CSS file in your theme. -->
-                    <skinFile>
-                        <path>css</path>
-                        <name>skin.css</name>
-                    </skinFile>
+        <li>Prepare your files in folders.
+            <ul>
+                <li><b>Layout templates and associated files</b>
+                    <p><b>Tip:</b> You can provide a preview by including an image file with the same filename as your layout template or container; example, add a <code>MyLayoutOrContainer.jpg</code> preview for the <code>MyLayoutOrContainer.ascx</code> layout template or container.</p> <!-- Is this correct? -->
+                    <ul>
+                        <li>Layout template files (*.ascx)</li>
+                        <li>Preview of individual layout templates (*.png/jpg/etc.)</li> <!-- Video only showed jpg. Is it restricted to jpg? -->
+                        <li>Document Type XML file for individual layout templates (*.doctype.xml)</li>
+                        <li>CSS for individual layout templates (*.css)</li>
+                        <li>CSS for the theme (skin.css)</li>
+                        <li>Custom attributes of tokens (skin.xml)</li>
+                   </ul>
+                </li>
+                <li><b>Containers and associated files</b>
+                    <ul>
+                        <li>Container files (*.ascx)</li>
+                        <li>Preview of individual containers (*.png/jpg/etc.)</li> <!-- Video only showed jpg. Is it restricted to jpg? -->
+                        <li>CSS for individual containers (*.css)</li>
+                        <li>Custom attributes of tokens (container.xml)</li>
+                    </ul>
+                </li>
+                <li><b>Modules and associated files</b>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+                <li><b>Folders</b>
+                    <ul>
+                        <li>css - All CSS required by layout templates and containers.</li>
+                        <li>fonts - All web fonts used by the theme.</li>
+                        <li>images - All image files used by the theme.</li>
+                        <li>js - All JScript files used by the theme, such as bootstrap.min.js and common.js.</li>
+                        <li>menu - All desktop menu files for the skin.</li>
+                        <li>mobmenu - All mobile menu files for the skin.</li>
+                    </ul>
+                </li>
+                <li><b>License/Release Notes</b>
+                    <p>These files are HTML-formatted files:</p>
+                    <ul>
+                        <li>MyContainerLicense.txt</li>
+                        <li>MyContainerReleaseNotes.txt</li>
+                        <li>MyPackageLicense.txt</li>
+                        <li>MyPackageReleaseNotes.txt</li>
+                        <li>MySkinLicense.txt</li>
+                        <li>MySkinReleaseNotes.txt</li>
+                    </ul>
+                    <p><b>Tip:</b> In the license files, you can include special offers, including a call to action and other details.</p>
+                    <p><b>Reminder:</b> Include the version number of your extension in the release notes. </p>
+                </li>
+                <li></li>
+                <li></li>
+            </ul>
+        </li>
+
+
+        <li>Create the <a href="DNNManifestSchema.html">DNN manifest</a>.
+            <p><b>Note:</b> Containers must be defined under a separate <code><package></code> section, even though it would be installed as part of the theme.</p> <!-- Is this still true? -->
+            <p>Example of a portion of the <b>DNN manifest</b> of a theme:
+                <xmp>
+            <package name="..." type="Skin" version="...">
+                ...
+                <license src="MySkinLicense.txt" />
+                <releaseNotes src="MySkinReleaseNotes.txt" />
+                ...
+                <components>
+                    <component type="File">
+                        <files>
+                            <file>
+                                <name>MyPackageLicense.txt</name>
+                            </file>
+                            <file>
+                                <name>MyPackageReleaseNotes.txt</name>
+                            </file>
+                        </files>
+                    </component>
+                    <component type="Skin">
+                        <skinFiles>
+                            <basePath /> <!-- Target base folder for the component installation. Relative to the root of the DNN installation. -->
+                            <skinName>MyThemeName</skinName>
+
+                            <!-- Create a skinFile section for every CSS file in your theme. -->
+                            <skinFile>
+                                <path>css</path>
+                                <name>skin.css</name>
+                            </skinFile>
+                            ...
+
+                            <!-- Create a skinFile section for every font used in your theme. -->
+                            <skinFile>
+                                <path>fonts</path>
+                                <name>NameOfFont.ttf</name>
+                            </skinFile>
+                            ...
+
+                            <!-- Create a skinFile section for every other file used in your theme, such as images. -->
+                            <skinFile>
+                                <path>images</path>
+                                <name>MyImage.png</name>
+                            </skinFile>
+                            ...
+                        </skinFiles>
+                    </component>
                     ...
+                </components>
+            </package>
+            <package name="..." type="Container" version="...">
+                ...
+                <license src="MyContainerLicense.txt" />
+                <releaseNotes src="MyContainerReleaseNotes.txt" />
+                ...
+                <components>
+                    <component type="Container">
+                        <containerFiles>
+                            <basePath /> <!-- Target base folder for the component installation. Relative to the root of the DNN installation. -->
+                            <containerName>MyThemeName</containername>
 
-                    <!-- Create a skinFile section for every font used in your theme. -->
-                    <skinFile>
-                        <path>fonts</path>
-                        <name>NameOfFont.ttf</name>
-                    </skinFile>
+                            <!-- Create a containerFile section for every container file in your theme. -->
+                            <containerFile>
+                                <name>MyContainer.ascx</name>
+                            </containerFile>
+                            <containerFile>
+                                <name></name>
+                            </containerfile>
+                            ...
+                        </containerFiles>
+                    </component>
                     ...
-
-                    <!-- Create a skinFile section for every other file used in your theme, such as images. -->
-                    <skinFile>
-                        <path>images</path>
-                        <name>MyImage.png</name>
-                    </skinFile>
-                    ...
-                </skinFiles>
-            </component>
-            ...
-        </components>
-    </package>
-    <package name="..." type="Container" version="...">
-        ...
-        <license src="MyContainerLicense.txt" />
-        <releaseNotes src="MyContainerReleaseNotes.txt" />
-        ...
-        <components>
-            <component type="Container">
-                <containerFiles>
-                    <basePath /> <!-- Target base folder for the component installation. Relative to the root of the DNN installation. -->
-                    <containerName>MyThemeName</containername>
-
-                    <!-- Create a containerFile section for every container file in your theme. -->
-                    <containerFile>
-                        <name>MyContainer.ascx</name>
-                    </containerFile>
-                    <containerFile>
-                        <name></name>
-                    </containerfile>
-                    ...
-                </containerFiles>
-            </component>
-            ...
-        </components>
-    </package>
-        </xmp>
-    </p>
-    <p><b>Note: </b>Save the manifest file(s) (*.dnn*) in the base folder of your package.</p>
-</li>
+                </components>
+            </package>
+                </xmp>
+            </p>
+            <p><b>Note: </b>Save the manifest file(s) (*.dnn*) in the base folder of your package.</p>
+        </li>
 
 
-<li>Zip up your files, preserving the folder structure.</li>
+        <li>Zip up your files, preserving the folder structure.</li>
 
 
-</ol>
+    </ol>
 
 
-<h2>Sources</h2>
-<ul>
-    <li>DNN Professional Training video: <a href="http://www.dnnsoftware.com/services/professional-training/training-videos-subscription/skinning-5-packaging">Skinning 5: Packaging</a></li>
-</ul>
-
-
-<!--
-.. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
--->
-
-</body>
+    <h2>Sources</h2>
+    <ul>
+        <li>DNN Professional Training video: <a href="http://www.dnnsoftware.com/services/professional-training/training-videos-subscription/skinning-5-packaging">Skinning 5: Packaging</a></li>
+    </ul>
