--- a/design/BuildingThemes/CreateContainer.html
+++ b/design/BuildingThemes/CreateContainer.html
@@ -17,13 +17,14 @@
     <h2> Steps </h2>
     <ol>
 
-    <li> Create a new file for the container.
-        <p><b>Note:</b>
+    <li>Create a new file for the container.
+        <p><b>Note:</b> <!-- Need to be confirmed. -->
             <ul>
-                <li>The container must contain at least one pane. </li>
-                <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
-                <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
+                <li>The container must contain exactly one pane. </li>
+                <li>The single pane must be called <b>ContentPane</b>.</li>
+                <li>The single pane must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
                 <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
+                <li>(Optional) You can add the attribute <code>visible="false"</code> to the pane to prevent it from being displayed if no module is assigned to it.</li>
             </ul>
         </p>
         <p><b>Example:</b> A very basic container.
@@ -43,7 +44,7 @@
         </p>
     </li>
 
-    <li> (Optional) Add theme objects to your container for a more dynamic page.
+    <li>(Optional) Add theme objects to your container for a more dynamic page.
         <p><object width="100%" data="../../common/bptext/BP-AddThemeObjects.html"></object></p>
 
         <p>The following theme objects are relevant to containers:</p> <!-- Joe will provide the complete list -->
@@ -70,5 +71,18 @@
 
 
     <h2> Example </h2>
+    <xmp>
+    </xmp>
 
-    <p><a href="../../common/samples/MyContainer.css" download>DOWNLOAD</a></p>
+
+    <h2> See Also </h2>
+    <ul>
+        <li><a href="CreateCSS.html">Create CSS</a></li>
+        <li><a href="CreateLayoutTemplate.html">Create Layout Template</a></li>
+    </ul>
+
+
+    <h2> Sources </h2>
+    <ul>
+        <li>DNN Professional Training: <a href="http://www.dnnsoftware.com/services/professional-training/training-videos-subscription/skinning-2-creating-html-skins"></a>Creating HTML Skins</li>
+    </ul>
