--- a/design/BuildingThemes/CreateLayoutTemplate.html
+++ b/design/BuildingThemes/CreateLayoutTemplate.html
@@ -11,6 +11,7 @@
             <ul>
                 <li>The layout template must contain at least one pane.</li>
                 <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
+                <li>Each pane must have a name that is unique within the page.</li> <!-- Is this still true? -->
                 <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li> <!-- Joe will confirm. -->
                 <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
             </ul>
@@ -144,10 +145,7 @@
         </tr>
         </table>
 
-        <p>
-            <!--#include file="../../common/bptext/BP-TipSkinningTool.html" -->
-            <object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object>
-        </p>
+        <p><!--#include virtual="../../common/bptext/BP-TipSkinningTool.html" --></p>
     </li>
 
     </ol>
