Update placeholder text

--- a/dev/BuildingModules/BuildMVCModule.html
+++ b/dev/BuildingModules/BuildMVCModule.html
@@ -1,14 +1,7 @@
-.. include:: /../common/stub-topic.txt
-
 =======================
-|stub-icon| MVC Modules
+|InProgress| MVC Modules
 =======================
 
 (Insert docs about MVC Modules here.) 
 
-
-
 .. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
-
