--- a/dev/BuildingModules/BuildSPAModule.html
+++ b/dev/BuildingModules/BuildSPAModule.html
@@ -1,7 +1,5 @@
-.. include:: /../common/stub-topic.txt
-
 =======================
-|stub-icon| SPA Modules
+|InProgress| SPA Modules
 =======================
 
 (Insert docs about SPA Modules here.) 
@@ -9,6 +7,3 @@
 
 
 .. include:: /../common/stub-notice.txt
-
-.. include:: /../common/contribute.txt
-
