[DOC-6] ConvertHTMLToASCX: Updated screenshots. [DOC-12] Renamed from Build* to Creat* and updated links. [DOC-15] CreateWebFormsModule: In progress.

--- a/dev/CreatingModules.html
+++ b/dev/CreatingModules.html
@@ -1,11 +1,11 @@
 .. raw:: html
 
-    <h1> Building Modules </h1>
+    <h1> Creating Modules </h1>
 
     <h2> Overview </h2>
     <p>You can produce a module in different ways:
         <ul>
-            <li>Build an entire module from scratch.</li>
+            <li>Create an entire module from scratch.</li>
             <li>Start with module development templates, such as:
                 <ul>
                     <li><a href="https://github.com/jbrinkman/DNN8Templates">DNN 8 Templates</a></li>
@@ -20,12 +20,13 @@
     </p>
 
 
-    <h2>How to Build a Module</h2>
+    <h2>How to Create a Module</h2>
 
     <h3>Prerequisites</h3>
 
     <ul>
         <li><a href="/common/Setup/SetUpDNN.html">A local DNN installation</a> with <b>Host</b> permissions.</li>
+        <li>Visual Studio 2015 is the recommended IDE for developing DNN modules.</li>
     </ul>
 
 
@@ -35,13 +36,13 @@
 
     <li><b>Create a new module or modify an existing one.</b>
         <ul>
-            <li><a href="BuildWebFormsModule">Build a Web Forms module.</a></li>
-            <li><a href="BuildMVCModule.html">Build an MVC module.</a></li>
-            <li><a href="BuildSPAModule.html">Build SPA module.</a></li>
+            <li><a href="/dev/CreatingModules/CreateWebFormsModule">Create a Web Forms module.</a></li>
+            <li><a href="/dev/CreatingModules/CreateMVCModule.html">Create an MVC module.</a></li>
+            <li><a href="/dev/CreatingModules/CreateSPAModule.html">Create SPA module.</a></li>
         </ul>
     </li>
 
-    <li><b><a href="/common/Extensions/BuildPackage.html">Package your module.</a></b></li>
+    <li><b><a href="/common/Extensions/CreatePackage.html">Package your module.</a></b></li>
 
     <li><b>Test your module.</b>
         <ol>
