--- a/common/themes/dnn/layout.html
+++ b/common/themes/dnn/layout.html
@@ -1,7 +1,13 @@
 {% extends "basic/layout.html" %}
 
+{# Silence the sidebar's, relbar's #}
+{% block header %}{% endblock %}
+{% block relbar1 %}{% endblock %}
+{% block relbar2 %}{% endblock %}
+{% block sidebarsourcelink %}{% endblock %}
+
 {% set theme_css_files = [
-    'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css',
+    'http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css',
     '_static/dnn.styles.css'
   ]
 %}
@@ -9,8 +15,8 @@
 {% set css_files = css_files + theme_css_files %}
 
 {% set script_files = script_files + [
-    'https://code.jquery.com/jquery-1.11.3.min.js',
-    'https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
+    'http://code.jquery.com/jquery-1.11.3.min.js',
+    'http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
   ]
 %}
 
@@ -18,54 +24,56 @@
 
 {%- set bs_content_width = render_sidebar and "9" or "12" %}
 
-{%- block doctype -%}
-<!DOCTYPE html>
-{%- endblock %}
-
-{# Sidebar: Rework into our Bootstrap nav section. #}
 {% macro navBar() %}
 {% include "navbar.html" %}
 {% endmacro %}
 
-<!-- ^ Complete ^ -->
-
 {%- macro bsidebar() %}
     {%- if render_sidebar %}
-    <div class="col-md-3">
-      <div id="sidebar" class="bs-sidenav" role="complementary">
+    <nav class="doc-nav-wrapper">
         {%- for sidebartemplate in sidebars %}
           {%- include sidebartemplate %}
         {%- endfor %}
-      </div>
-    </div>
+	</nav>
     {%- endif %}
 {%- endmacro %}
 
+{%- block doctype -%}
+<!DOCTYPE html>
+{%- endblock %}
+
 {%- block extrahead %}
 <meta charset='utf-8'>
-<meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
-<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1'>
+<meta name='viewport' content='width=device-width, initial-scale=1.0'>
 <meta name="apple-mobile-web-app-capable" content="yes">
 {% endblock %}
 
-{# Silence the sidebar's, relbar's #}
-{% block header %}{% endblock %}
-{% block relbar1 %}{% endblock %}
-{% block relbar2 %}{% endblock %}
-{% block sidebarsourcelink %}{% endblock %}
-
 {%- block content %}
 {{ navBar() }}
-<div class="container">
-  <div class="row">
+
+{% if sidebars %} 
+<main class="main-body doc-main-body">
     {%- block sidebar1 %}{{ bsidebar() }}{% endblock %}
-    <div class="col-md-{{ bs_content_width }} content">
-      {% block body %}{% endblock %}
+    <section class="doc-wrapper">
+        <div class="doc">
+{% else %}
+<main class="main-body">
+    <div class="container-fluid">
+{% endif %}
+
+{% block body %}{% endblock %}
+
+{% if sidebars %}
+        </div>
+        <nav class="article-nav-wrapper">
+            {% block sidebar2 %}{% endblock %}         
+        </nav>
+    </section>
+</main>
+{% else %}
     </div>
-    {% block sidebar2 %} {# possible location for sidebar #} {% endblock %}
-  </div>
-</div>
-<p>{{ bootswatch_css_custom }}</p>
+</main>
+{% endif %}
 {%- endblock %}
 
 {%- block footer %}
